# talos-rustmq

./: .gitignore  BUILD-DEPLOY-GUIDE.md  Cargo.toml  Dockerfile  Dockerfile.batching-test  Dockerfile.runtime-only  Dockerfile.test-consumer  Dockerfile.test-producer  README.md
.github/workflows/: build-push.yml
examples/: k8s-batching-test.rs  k8s-test-consumer.rs  k8s-test-producer.rs  test-consumer.rs  test-producer.rs
k8s/: 00-namespace.yaml  01-statefulset.yaml  02-services.yaml  03-servicemonitor.yaml
src/: config.rs  lib.rs  message.rs  metrics.rs  partition.rs  router.rs
src/server/: consumer.rs  mod.rs  producer.rs
