[package]
name = "rustmq"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustmq"
path = "src/lib.rs"

[[bin]]
name = "rustmq-server"
path = "src/bin/server.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.8"

# Memory-mapped I/O
memmap2 = "0.9"

# Lock-free data structures
crossbeam = "0.8"

# Hashing
ahash = "0.8"

# Metrics
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

# HTTP server for metrics
warp = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling (for examples)
chrono = "0.4"

[[example]]
name = "k8s-test-producer"
path = "examples/k8s-test-producer.rs"

[[example]]
name = "k8s-test-consumer"
path = "examples/k8s-test-consumer.rs"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
